thêm by me a coffee vào giao diện tiếng VIệt.

--- a/vi.html
+++ b/vi.html
@@ -182,6 +182,9 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
                     <div class="coffee-image-wrapper">
                             <img src="/vb.webp" alt="Buy me a Coffee Support" class="bank-qrcode">
+                        <a href="https://ko-fi.com/thinhpxp" target="_blank" rel="noopener noreferrer" class="buy-coffee-link">
+                            <img src="/buymeacoffee.webp" alt="Buy me a Coffee Support" class="coffee-support-image">
+                        </a>
                     </div>
                     <!-- === NÚT CHIA SẺ MẠNG XÃ HỘI === -->
                 <div class="social-share-container">
